--- a/_includes/common/footer/footer.html
+++ b/_includes/common/footer/footer.html
@@ -1,4 +1,3 @@
-<footer>
-	<div class="copyright">CopyRight&copy;Alfred' blog.</div>
-	<div>Design by Alfred. 2012 - {{}}</div>
+<footer class="inner">
+    <p><div class="copyright">CopyRight&copy;Ryota' blog.</div><div>Design by Ryota. 2012 - {{}}</div></p>
 </footer>
