--- a/_includes/common/header/header.html
+++ b/_includes/common/header/header.html
@@ -1,1 +1,5 @@
-<header><img src="/assets/logo.png" alt="logo"></header>
+<header class="inner">
+  <a id="forkme_banner" href="https://github.com/lichenhao">View on GitHub</a>
+  <h1 id="project_title">良田's Blog</h1>
+  <h2 id="project_tagline">良田有沃土，待花盛开时~</h2>
+</header>
