--- a/_includes/common/footer/footer.html
+++ b/_includes/common/footer/footer.html
@@ -1,3 +1,3 @@
 <footer class="inner">
-    <p><div class="copyright">CopyRight&copy;Ryota' blog.</div><div>Design by Ryota. 2012 - {{}}</div></p>
+    <p><span class="copyright">CopyRight&copy;Ryota' blog.</span><span>Design by Ryota. 2012 - {{page.date| date: "%Y"}}</span></p>
 </footer>
