--- a/_includes/common/footer/footer.html
+++ b/_includes/common/footer/footer.html
@@ -1,3 +1,3 @@
-<footer class="inner">
+<footer>
     <p><span class="copyright">CopyRight&copy;Ryota' blog.</span><span>Design by Ryota. 2012 - 2014</span></p>
 </footer>
