--- a/_includes/common/footer/footer.html
+++ b/_includes/common/footer/footer.html
@@ -1,3 +1,3 @@
 <footer>
-    <p><span class="copyright">CopyRight&copy;Ryota' blog.</span><span>Design by Ryota. 2012 - 2014</span></p>
+<span class="copyright">CopyRight&nbsp;&copy;&nbsp;2012 - 2014</span><span>Design by Ryota. </span>
 </footer>
