--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html id="theme-{{page.theme || 'default'}}">
 <head>
 	<meta charset="utf-8" />
 	<link rel="fluid-icon" href="https://github.com/fluidicon.png" title="GitHub">
@@ -11,7 +11,8 @@
   <meta http-equiv="X-UA-Compatible" content="chrome=1" />
   <meta name="description" content="Lichenhao.github.io : A blog " />
 	<title>{{page.title}}</title>
-  <link rel="stylesheet" type="text/css" media="screen" href="/stylesheets/stylesheet.css">
+  <link rel="stylesheet"  media="screen" href="/stylesheets/stylesheet.css">
+  <link rel="stylesheet" media="screen" href="/stylesheets/theme-{{page.theme || 'default'}}.css" />
 	<!--[if IE]><script src="/"></script><![endif]-->
 </head>
 <body>
