--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -5,41 +5,22 @@ by Jason Costello, @jsncostello
 
 @import url(pygment_trac.css);
 
-/*******************************************************************************
-MeyerWeb Reset
-*******************************************************************************/
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font: inherit;
-  vertical-align: baseline;
+#theme-default header {
+  padding: 10px 40px;
 }
-
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-  display: block;
+#theme-default footer {
+  text-align: center;
+  height: 24px;
+  border-top: 2px solid #0090FF;
+  color: #999;
 }
-
-ol, ul {
-  list-style: none;
+#theme-default .content-wrap {
+  margin-bottom: 24px;
 }
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
+#theme-default #project_tagline {
+  font-size: 18px;
+  margin-left: 60px;
+}
+@media screen and (max-height: 480px) {
+  
 }
